[gd_scene load_steps=3 format=3 uid="uid://bep4vtmqwsete"]

[ext_resource type="Script" uid="uid://bip1gh8m3iyan" path="res://test_scene.gd" id="1_0e48y"]
[ext_resource type="PackedScene" uid="uid://dobkpr5ucg8no" path="res://Snake/Body/snake_body.tscn" id="2_epypp"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_0e48y")

[node name="SnakeBody" parent="." instance=ExtResource("2_epypp")]

[node name="SnakeBody2" parent="." instance=ExtResource("2_epypp")]

[node name="SnakeBody3" parent="." instance=ExtResource("2_epypp")]
